manifests/redis/redis-staefulset.yaml
apiVersion: apps/v1
kind: StatefulSet 
metadata:
  name: redis
  namespace: cloudops-prod
spec:
  serviceName: redis
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: 128m
              memory: 128Mi 
            limits:
              cpu: 256m 
              memory: 256Mi 
          volumeMounts:
            - name: redis-data
              mountPath: /data 
  volumeClaimTemplates:
    - metadata:
        name: redis-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: gp2 
        resources:
          requests:
            storage: 5Gi
