manifests/redis/redis-service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: redis
  namespace: cloudops-prod
  labels:
    app: redis
spec:
  clusterIP: None
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
