manifests/redis/redis-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-networking-policy
  namespace: cloudops-prod
spec:
  podSelector:
    matchLabels:
      app: redis 
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: api
      ports:
        - port: 6379
